--- a/views/countryRes.ejs
+++ b/views/countryRes.ejs
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <section class="containAll">
+       <% banana.forEach(element => {%>
     
+        
+        <li>Date: <%= element.Date%></li>
+        <li>Total Deaths: <%= element.Cases%></li>
+        
+  <%}); %>
+</section>
+</form>
 </body>
 </html>
 
