--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corona</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <section class="containAll">
@@ -13,6 +15,7 @@
             <li>Total Recovered:<%= statt.TotalRecovered%></li>
       
     </section>
+    <section>
     <form action="/getCountryResult" method="post">
         <input type="text" name="country" id="country" placeholder="country name">
         <label>from</label>
@@ -21,6 +24,7 @@
     <input type="date" name="date2" id="date2">
     <input type="submit" value="Search">
     </form>
+</section>
 </body>
 </html>
 
